--- a/dashboard.html
+++ b/dashboard.html
@@ -152,7 +152,7 @@
                                         <th class="px-4 py-3 text-right text-xs font-medium text-gray-500 uppercase">Total</th>
                                         <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Cajero</th>
                                         <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Estado</th>
-                                        <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Acciones</th>
+                                        <th id="orders-actions-header" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Acciones</th>
                                     </tr>
                                 </thead>
                                 <tbody id="orders-table-body" class="bg-white divide-y divide-gray-200"></tbody>
@@ -398,8 +398,9 @@
             const ordersTableBody = document.getElementById('orders-table-body'); // Necesitamos un tbody con este ID
             if (!ordersTableBody) return;
 
+            const colspan = userRole === 'admin' ? 6 : 5;
             if (orders.length === 0) {
-                ordersTableBody.innerHTML = `<tr><td colspan="5" class="text-center py-4 text-gray-500">No hay pedidos para mostrar.</td></tr>`;
+                ordersTableBody.innerHTML = `<tr><td colspan="${colspan}" class="text-center py-4 text-gray-500">No hay pedidos para mostrar.</td></tr>`;
                 return;
             }
 
@@ -409,6 +410,8 @@
                 const cancelButton = userRole === 'admin' && !isCancelled
                     ? `<button onclick="cancelOrder(${order.id})" class="text-red-600 hover:text-red-800 font-medium">Anular</button>`
                     : '';
+                
+                const actionsCell = userRole === 'admin' ? `<td class="px-4 py-2">${cancelButton}</td>` : '';
 
                 return `
                     <tr class="${rowClass}">
@@ -417,7 +420,7 @@
                         <td class="px-4 py-2 text-right">S/. ${parseFloat(order.total).toFixed(2)}</td>
                         <td class="px-4 py-2">${order.user?.username || 'N/A'}</td>
                         <td class="px-4 py-2">${order.status}</td>
-                        <td class="px-4 py-2">${cancelButton}</td>
+                        ${actionsCell}
                     </tr>
                 `;
             }).join('');
@@ -519,6 +522,7 @@
                         { href: '/manage-users.html', text: 'Gestionar Usuarios' },
                         { href: '/manage-expenses.html', text: 'Gestionar Gastos' },
                         { href: '/sales-report.html', text: 'Reporte de Ventas' },
+                        { href: '/accounts-receivable.html', text: 'Cuentas por Cobrar' },
                         { href: '/cashier-closures-report.html', text: 'Historial de Cierres' },
                         { href: '/accounts.html', text: 'Cuentas Abiertas' }
                     ];
@@ -555,6 +559,11 @@
             // Mostrar la sección de aprobación de cierres solo para el admin
             if (userRole === 'admin') {
                 document.getElementById('admin-closure-approval-section').classList.remove('hidden');
+            }
+
+            // Ocultar la cabecera de acciones si no es admin
+            if (userRole !== 'admin') {
+                document.getElementById('orders-actions-header').style.display = 'none';
             }
 
         }
