--- a/sales-report.html
+++ b/sales-report.html
@@ -277,13 +277,20 @@
                 const isCancelled = order.status === 'cancelled';
                 const rowClass = isCancelled ? 'bg-red-50 text-gray-400 line-through' : 'hover:bg-gray-50';
 
+                let paymentMethodHtml = order.payment_method || 'N/A';
+                if (isCancelled) {
+                    paymentMethodHtml = 'ANULADO';
+                } else if (order.payment_method === 'Por Cobrar') {
+                    paymentMethodHtml = `<span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-yellow-100 text-yellow-800">Por Cobrar</span>`;
+                }
+
                 return `
                     <tr class="${rowClass}">
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${new Date(order.timestamp).toLocaleDateString('es-PE')}</td>
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">${order.customer?.full_name || 'Cliente no encontrado'}</td>
                         <td class="px-6 py-4 text-sm text-gray-500"><ul class="list-disc list-inside">${itemsList}</ul></td>
                         <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium text-gray-900">S/. ${parseFloat(order.total).toFixed(2)}</td>
-                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${isCancelled ? 'ANULADO' : (order.payment_method || 'N/A')}</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${paymentMethodHtml}</td>
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${order.user?.username || 'Cajero no encontrado'}</td>
                     </tr>
                 `;
