--- a/login.html
+++ b/login.html
@@ -59,10 +59,7 @@
 
                 // MODIFICACIÓN: Redirigir según el rol del usuario.
                 // El cajero va al menú principal para iniciar su caja.
-                // El admin y otros roles van directamente al dashboard.
-                if (data.role === 'cashier') window.location.href = '/index.html';
-                else window.location.href = '/dashboard';
-
+                window.location.href = '/index.html';
             } catch (error) {
                 errorMessage.textContent = error.message;
             }
