--- a/dashboard.html
+++ b/dashboard.html
@@ -539,6 +539,7 @@
                     adminMenuItemsContainer.innerHTML += `<a href="/index.html" class="block px-4 py-2 text-sm text-blue-600 font-semibold hover:bg-gray-100">Ir al Menú Principal</a>`;
                     adminMenuItemsContainer.innerHTML += `<a href="/accounts.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Cuentas Abiertas</a>`;
                     adminMenuItemsContainer.innerHTML += `<a href="/manage-products.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Gestionar Productos</a>`;
+                    adminMenuItemsContainer.innerHTML += `<a href="/accounts-receivable.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Cuentas por Cobrar</a>`;
                     adminMenuItemsContainer.innerHTML += `<a href="/manage-expenses.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Registrar Gasto</a>`;                    // CORRECCIÓN: El reporte de ventas solo es para admin y cashier.
                     // El enlace al reporte de ventas es visible para los cajeros.
                     cashierActionsContainer.classList.remove('hidden');
