--- a/accounts-receivable.html
+++ b/accounts-receivable.html
@@ -56,6 +56,7 @@
                             <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Cliente</th>
                             <th class="px-4 py-3 text-right text-xs font-medium text-gray-500 uppercase">Monto</th>
                             <th class="px-4 py-3 text-center text-xs font-medium text-gray-500 uppercase">Estado</th>
+                            <th class="px-4 py-3 text-center text-xs font-medium text-gray-500 uppercase">Detalles</th>
                             <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Acciones</th>
                         </tr>
                     </thead>
@@ -103,8 +104,7 @@
             const status = statusFilter.value;
             let query = `?status=${status}`;
             if (customerId) query += `&customerId=${customerId}`;
-
-            creditsTbody.innerHTML = `<tr><td colspan="5" class="text-center py-8">Cargando...</td></tr>`;
+            creditsTbody.innerHTML = `<tr><td colspan="6" class="text-center py-8">Cargando...</td></tr>`;
             const response = await fetch(`/api/credits/receivable${query}`, { headers: { 'Authorization': `Bearer ${token}` } });
             const credits = await response.json();
             renderCredits(credits);
@@ -112,25 +112,42 @@
 
         function renderCredits(credits) {
             if (credits.length === 0) {
-                creditsTbody.innerHTML = `<tr><td colspan="5" class="text-center py-8">No se encontraron deudas.</td></tr>`;
+                creditsTbody.innerHTML = `<tr><td colspan="6" class="text-center py-8">No se encontraron deudas.</td></tr>`;
                 return;
             }
             creditsTbody.innerHTML = credits.map(credit => {
                 const actionsHtml = credit.status === 'unpaid'
                     ? `<button onclick="openPaymentModal(${credit.id}, ${credit.amount})" class="text-green-600 font-medium">Registrar Pago</button>`
                     : `Pagado el ${new Date(credit.paid_at).toLocaleDateString('es-PE')}`;
+                
+                const itemsListHtml = credit.order.orderItems.map(item => 
+                    `<li class="text-sm text-gray-600">${item.quantity}x ${item.product.name}</li>`
+                ).join('');
 
                 return `
-                    <tr>
+                    <tr class="border-b">
                         <td class="px-4 py-3">${new Date(credit.order.timestamp).toLocaleDateString('es-PE')}</td>
                         <td class="px-4 py-3">${credit.customer.full_name}</td>
                         <td class="px-4 py-3 text-right font-medium">S/. ${parseFloat(credit.amount).toFixed(2)}</td>
                         <td class="px-4 py-3 text-center">
-                            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full ${statusClasses[credit.status]}">
+                            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full ${statusClasses[credit.status]} whitespace-nowrap">
                                 ${statusText[credit.status]}
                             </span>
                         </td>
+                        <td class="px-4 py-3 text-center">
+                            <button onclick="toggleDetails(this)" class="text-blue-500 hover:text-blue-700 text-xs">Ver</button>
+                        </td>
                         <td class="px-4 py-3">${actionsHtml}</td>
+                    </tr>
+                    <tr class="hidden bg-gray-50">
+                        <td colspan="6" class="p-4">
+                            <div class="pl-5">
+                                <h4 class="font-semibold text-gray-700">Items del Pedido:</h4>
+                                <ul class="list-disc list-inside">
+                                    ${itemsListHtml}
+                                </ul>
+                            </div>
+                        </td>
                     </tr>
                 `;
             }).join('');
@@ -172,6 +189,18 @@
             paymentMethods = await response.json();
             const select = document.getElementById('payment-method-select');
             select.innerHTML = paymentMethods.map(m => `<option value="${m}">${m}</option>`).join('');
+        }
+
+        function toggleDetails(button) {
+            const detailsRow = button.closest('tr').nextElementSibling;
+            const isHidden = detailsRow.classList.contains('hidden');
+            if (isHidden) {
+                detailsRow.classList.remove('hidden');
+                button.textContent = 'Ocultar';
+            } else {
+                detailsRow.classList.add('hidden');
+                button.textContent = 'Ver';
+            }
         }
 
         // Lógica de búsqueda de clientes (simplificada)
